# nlp-course

./: .gitignore  main.py  pyproject.toml  requirements.txt  virtual-en-setting.md
assignment1/: Assignment1_Part1_Regex.ipynb
lab3/: lab3_Part1_TextVisualization_Classical.ipynb  lab3_Part2_WordEmbeddings.ipynb
lab4/: lab4_Part1_CoreNLP_Tasks.ipynb  lab4_Part2_Classification_Sentiment_Topics.ipynb
lab5/: lab5_DeepLearning_LLMs_NLP.ipynb
