[project]
name = "nlp-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
  "gensim>=4.3.0",
  "sentence-transformers>=2.2.2",
  "transformers>=4.30.0",
  "torch>=1.9.0",
  "datasets>=2.4.0",
  "scikit-learn>=1.0",
  "nltk>=3.6",
   "matplotlib>=3.5",
  "seaborn>=0.11",
  "matplotlib-inline>=0.1.6",
  "pillow>=9.0",
  "ipython>=8.0",
  "notebook>=6.5",
  "tqdm>=4.64"
  
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    ]